# wikichat

./: .gitignore  README.md  WikiChat.ipynb  pyproject.toml
app/: logging.conf  main.py  schemas.py
app/chatbot/: __init__.py  intent_classifier.py  responder.py
app/db/: __init__.py  database.py
app/resources/: chatbot_model.pth  intents.json
app/webloader/: __init__.py  webloader.py
frontend/: chat_ui.py
